@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-18T16:16:51Z",
-  "count_outdated" : 249,
-  "uniques_outdated" : 117,
+  "timestamp" : "2022-04-20T01:03:36Z",
+  "count_outdated" : 250,
+  "uniques_outdated" : 118,
   "count" : 260,
   "uniques" : 126,
   "clones" : [
-    {
-      "timestamp": "2022-04-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-04-06T00:00:00Z",
       "count": 1,
