@@ -1,3 +1,9 @@
+2022-04-20T01:03:36Z:
+* notice: last 14d: all unq: 10 7
+* notice: prev accum: outdated-all outdated-unq / all unq: 249 117 / 260 126
+* notice: next accum: outdated-all outdated-unq / all unq: 250 118 / 260 126
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0
+
 2022-04-18T16:16:51Z:
 * notice: last 14d: all unq: 11 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 249 117 / 252 120
